--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,16 +1,16 @@
 plugins {
-    id 'com.android.application'
-    id 'kotlin-android'
+    alias(libs.plugins.android.application)
+    alias(libs.plugins.kotlin.android)
 }
 
 android {
     namespace = "com.iamageo.another_read_more"
-    compileSdkVersion 34
+    compileSdkVersion 35
 
     defaultConfig {
         applicationId "com.iamageo.another_read_more"
-        minSdkVersion 19
-        targetSdkVersion 34
+        minSdkVersion 21
+        targetSdkVersion 35
         versionCode 1
         versionName "1.0"
 
@@ -40,25 +40,21 @@ android {
 }
 
 dependencies {
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.9.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    
+    implementation(project(":library"))
 
-    androidTestImplementation 'androidx.test:core:1.5.0'
-    androidTestImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    debugImplementation "androidx.test:core:1.5.0"
+    implementation(libs.kotlinStdlib)
+    implementation(libs.coreKtx)
+    implementation(libs.appcompat)
+    implementation(libs.material)
 
-    // Required -- JUnit 4 framework
-    testImplementation "junit:junit:4.13.2"
-    // Optional -- Robolectric environment
-    testImplementation "androidx.test:core:1.5.0"
-    // Optional -- Mockito framework
-    testImplementation "org.mockito:mockito-core:5.1.1"
-    // Optional -- Mockk framework
-    testImplementation "io.mockk:mockk:1.10.5"
+    androidTestImplementation(libs.testCore)
+    androidTestImplementation(libs.junit)
+    androidTestImplementation(libs.testExtJunit)
+    debugImplementation(libs.testCore)
 
-    implementation project(':library')
+    testImplementation(libs.junit)
+    testImplementation(libs.testCore)
+    testImplementation(libs.mockito)
+    testImplementation(libs.mockk)
 }
